<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent">  
	<TableLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:stretchColumns="1">
	    <TableRow
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	        <TextView
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/sos_state"
	            android:paddingBottom="5dp"
	            style="@style/SOSTextViewStyle"/>
	       	<TextView 
	       	    android:id="@+id/tv_sos_state"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"/>
	    </TableRow>
	    <TableRow
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	        <TextView
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/sos_start_time"
	            style="@style/SOSTextViewStyle"/>
	       	<TableLayout 
	       	    android:layout_width="fill_parent"
	       	    android:layout_height="wrap_content">
	       	    <TableRow 
	       	        android:layout_width="fill_parent"
	       	        android:layout_height="wrap_content">
			       	<EditText
			       	    android:id="@+id/et_sos_start_time"
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"
			            android:inputType="time"
			            android:maxLength="5"
			            android:text="@string/sos_start_time_default"
						style="@style/SOSEditViewStyle"/>
			       	<ImageButton 
			       	    android:id="@+id/btn_sos_start_time"
			       	    android:layout_width="wrap_content"
			       	    android:layout_height="wrap_content"			       	    			       	    
			       	    android:onClick="onTimePickerClick"
			       	    android:src="@drawable/clock"			       	    
			       	    android:contentDescription="@string/sos_start_time_tooltip"
			       	    style="@style/SOSImageBtnStyle"/>	       	        
	       	    </TableRow>
	       	</TableLayout>
	    </TableRow>
	    <TableRow
	    	android:layout_width="fill_parent"
	        android:layout_height="wrap_content">			       	
			<TextView 
	        	android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/sos_stop_time"
	            style="@style/SOSTextViewStyle"/>
			<TableLayout 
	       	    android:layout_width="fill_parent"
	       	    android:layout_height="wrap_content">
	       	    <TableRow 
	       	        android:layout_width="fill_parent"
	       	        android:layout_height="wrap_content">
	       			<EditText
	       	    		android:id="@+id/et_sos_stop_time"
	            		android:layout_width="fill_parent"
	            		android:layout_height="wrap_content"
	            		android:inputType="time"
	            		android:maxLength="5"	            		
	            		android:text="@string/sos_stop_time_default"
	            		style="@style/SOSEditViewStyle"/>
					<ImageButton 
					    android:id="@+id/btn_sos_stop_time"
				       	android:layout_width="wrap_content"
				       	android:layout_height="wrap_content"
				       	android:onClick="onTimePickerClick"
				       	style="@style/SOSImageBtnStyle"				       	
						android:contentDescription="@string/sos_stop_time_tooltip"
						android:src="@drawable/clock"/>
				</TableRow>
			</TableLayout>
	    </TableRow>
	    <TableRow
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
			<TextView 
				android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/sos_hot_call_number_1"
			    style="@style/SOSTextViewStyle"/>
			<TableLayout 
	       	    android:layout_width="fill_parent"
	       	    android:layout_height="wrap_content">
	       	    <TableRow 
	       	        android:layout_width="fill_parent"
	       	        android:layout_height="wrap_content">
			    	<EditText
			       	    android:id="@+id/et_sos_hot_call_number_1"
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"			            
			            android:inputType="phone"
			            android:maxLength="13"
			            android:text="@string/sos_hot_call_number_extantion"
			            style="@style/SOSEditViewStyle"/>
			       	<ImageButton 
			       	    android:id="@+id/btn_sos_hot_call_number_1"
			       	    android:layout_width="wrap_content"
			       	    android:layout_height="wrap_content"
			       	    style="@style/SOSImageBtnStyle"
			       	    android:contentDescription="@string/sos_hot_call_number_tooltip"			       	    
			       	    android:src="@drawable/contacts"
			       	    android:onClick="onIconClick"/>
				</TableRow>
			</TableLayout>
	    </TableRow>
		<TableRow
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/sos_hot_call_number_2"
				style="@style/SOSTextViewStyle"/>
			<TableLayout 
	       	    android:layout_width="fill_parent"
	       	    android:layout_height="wrap_content">
	       	    <TableRow 
	       	        android:layout_width="fill_parent"
	       	        android:layout_height="wrap_content">
			       	<EditText
			       	    android:id="@+id/et_sos_hot_call_number_2"
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"			            
			            android:inputType="phone"
			            android:maxLength="13"
			            android:text="@string/sos_hot_call_number_extantion"
			            style="@style/SOSEditViewStyle"/>
			       	<ImageButton 
			       	    android:id="@+id/btn_sos_hot_call_number_2"
			       	    android:layout_width="wrap_content"
			       	    android:layout_height="wrap_content"
			       	    style="@style/SOSImageBtnStyle"
			       	    android:contentDescription="@string/sos_hot_call_number_tooltip"			       	    
			       	    android:src="@drawable/contacts"
			       	    android:onClick="onIconClick"/>
				</TableRow>
			</TableLayout>
	    </TableRow>
	    <TableRow
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingBottom="5dp">
	        <CheckBox
	            android:id="@+id/cb_sos_send_sms"
	            style="@style/SOSCheckBoxStyle"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_span="2"
	            android:text="@string/sos_send_sms" />	       	
	    </TableRow>
	    <TableRow
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
			<TextView 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/sos_sms_number"
				style="@style/SOSTextViewStyle"/>
			<TableLayout 
	       	    android:layout_width="fill_parent"
	       	    android:layout_height="wrap_content">
	       	    <TableRow 
	       	        android:layout_width="fill_parent"
	       	        android:layout_height="wrap_content">
			       	<EditText
			       	    android:id="@+id/et_sos_sms_number"
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"			            
			            android:inputType="phone"
			            android:maxLength="13"
			            android:text="@string/sos_hot_call_number_extantion"
			            style="@style/SOSEditViewStyle"/>
			       	<ImageButton 
			       	    android:id="@+id/btn_sos_sms_number"
			       	    android:layout_width="wrap_content"
			       	    android:layout_height="wrap_content"
			       	    style="@style/SOSImageBtnStyle"		       	    
			       	    android:contentDescription="@string/sos_hot_call_number_tooltip"
			       	    android:src="@drawable/contacts"
			       	    android:onClick="onIconClick"/>
				</TableRow>
			</TableLayout>
	    </TableRow>
	    <TableRow
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	        <TextView 
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/sos_sms_text"
	            style="@style/SOSTextViewStyle"/>
	       	<EditText
	       	    android:id="@+id/et_sos_sms_text"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"	            
	            android:inputType="text"	            
	            android:text="@string/sos_sms_text_default"
	            style="@style/SOSEditViewStyle"/>
	    </TableRow>
	    <TableRow
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	       	<LinearLayout 
	       	    android:layout_width="fill_parent"
	       	    android:layout_height="wrap_content"
	       	    android:layout_span="3"
	       	    android:orientation="horizontal">
				<Button 
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:onClick="onBtnStartClick"
		            android:text="@string/sos_btn_start"
		            style="@style/SOSStyleButton"/>
		       	<Button
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:onClick="onBtnStopClick"
		            android:text="@string/sos_btn_stop"
		            style="@style/SOSStyleButton"/>
	       	</LinearLayout>
	    </TableRow>
	</TableLayout>
</ScrollView>